# interview-preparation

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md
notebooks/: experiments.ipynb
scripts/: 00_normalize_and_chunk.py  README.md
src/: config.py  constants.py
src/interview_prep/: __init__.py  config.py
src/interview_prep/CV/: __init__.py  chunker.py  cv_parser.py  cv_reader.py
src/interview_prep/chunking/: __init__.py  base_chunker.py  cv_chunker.py  job_chunker.py
src/interview_prep/embeddings/: __init__.py  embedder.py
src/interview_prep/job_descripition/: job_parser.py
src/interview_prep/matching/: matcher.py
src/interview_prep/schemas/: cv_schema.py
src/interview_prep/utils/: text_tools.py
tests/: __init__.py  conftest.py
